# avocadoGrowthDjango

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.md  development-template.md  documentation-enhancement.md  feature_request.md
.github/workflows/: django.yml
avocadogrowth/: manage.py  pyproject.toml  requirements.txt
avocadogrowth/avocadoapi/: apps.py  models.py  urls.py  views.py
avocadogrowth/avocadoapi/repositories/: base.py  mentors.py  repository_factory.py  requests.py  stacks.py  users.py  users_repository.py
avocadogrowth/avocadoapi/tests/: tests_models.py  tests_repositories.py  tests_utils.py
avocadogrowth/avocadoapi/tests/functionals/: test_dashboard.py  tests_login_logout_register.py
avocadogrowth/avocadoapi/utils/: Trie.py  trie.py
avocadogrowth/avocadogrowth/: asgi.py  settings.py  urls.py  wsgi.py
