[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avocadogrowthDjango"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "django",
    "pillow"
]
authors = [
    {name = "Quentin Haenn", email = "quentin.haenn.pro@gmail.com"},
]
maintainers = [
    {name = "Quentin Haenn", email = "quentin.haenn.pro@gmail.com"},
]
description = "The Avocado Growth project in Django."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["Django", "python project", "project"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/quentinhaenn/avocadoGrowthDjango"

[tool.flake8]
exclude = [
    "__init__.py",
    ".pytest_cache",
    ".git",
    "**/tests/",
    "venv/",
    "avocadoapi/migrations/",
    "build/",
    ]
filename = "*.py"
count = true
max-line-length = 120
ignore = ["F401"]
statistics = true

[tool.black]
line-length = 120
target-version = ['py39', "py310", "py311","py312"]


[tool.pylint.MASTER]
ignore-paths = [
    "^avocadoapi/tests/",
    "^avocadoapi/migrations/",
]
max-line-length = 120

[tool.pylint.main]
max-args = 10
max-attributes = 10
disable = ["missing-module-docstring", "missing-class-docstring", "unused-import", "no-member", 'invalid-str-returned']